--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-йа индекс
+<html>
+    <title>Домашка</title>
+<body>
+    <ul>
+        <li>
+            https://gist.github.com/KryvunRoman/bff39e47278a9c10820a49b70c8284d1 -> <a href="#" target="_blank">тута</a>
+        </li>
+    </ul>
+</body>
+</html>
