--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <body>
     <ul>
         <li>
-            https://gist.github.com/KryvunRoman/bff39e47278a9c10820a49b70c8284d1 -> <a href="#" target="_blank">тута</a>
+            <a href="https://gist.github.com/KryvunRoman/bff39e47278a9c10820a49b70c8284d1">hometask-lecture-Introduction-to-JS</a> 
+            -> 
+            <a href="#" target="_blank">тута</a>
         </li>
     </ul>
 </body>
