--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
     <title>Домашка</title>
+    <meta charset="UTF-8">
 <body>
     <ul>
         <li>
             <a href="https://gist.github.com/KryvunRoman/bff39e47278a9c10820a49b70c8284d1">hometask-lecture-Introduction-to-JS</a> 
             -> 
-            <a href="#" target="_blank">тута</a>
+            <a href="/lessons/bff39e47278a9c10820a49b70c8284d1.html" target="_blank">тута</a>
         </li>
     </ul>
 </body>
