--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <meta charset="UTF-8">
 <body>
     <ul>
+        <li><a href="https://github.com/doromones/c-education" target="_blank"> репа</li>
         <li>
             <a href="https://gist.github.com/KryvunRoman/bff39e47278a9c10820a49b70c8284d1">hometask-lecture-Introduction-to-JS</a> 
             -> 
-            <a href="/lessons/bff39e47278a9c10820a49b70c8284d1.html" target="_blank">тута</a>
+            <a href="lessons/bff39e47278a9c10820a49b70c8284d1.html" target="_blank">тута</a>
         </li>
     </ul>
 </body>
